--- a/XPO_EasyFields/XPO_EasyFields/XPO_EasyFields.vbproj
+++ b/XPO_EasyFields/XPO_EasyFields/XPO_EasyFields.vbproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{214B730D-E2FA-4424-88DC-2359D415B53C}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DX_XPOSimplifier</RootNamespace>
-    <AssemblyName>DX_XPOSimplifier</AssemblyName>
+    <RootNamespace>XPO_EasyFields</RootNamespace>
+    <AssemblyName>XPO_EasyFields</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <MyType>Windows</MyType>
     <TargetFrameworkVersion>v2.0</TargetFrameworkVersion>
@@ -32,8 +32,6 @@
     <IsWebBootstrapper>false</IsWebBootstrapper>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
-    <TargetFrameworkSubset>
-    </TargetFrameworkSubset>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -41,7 +39,7 @@
     <DefineDebug>true</DefineDebug>
     <DefineTrace>true</DefineTrace>
     <OutputPath>C:\Users\Michael\Documents\DevExpress\IDE Tools\Community\PlugIns</OutputPath>
-    <DocumentationFile>DX_XPOSimplifier.xml</DocumentationFile>
+    <DocumentationFile>XPO_EasyFields.xml</DocumentationFile>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022,42353,42354,42355</NoWarn>
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
     <PlatformTarget>x86</PlatformTarget>
@@ -52,7 +50,7 @@
     <DefineTrace>true</DefineTrace>
     <Optimize>true</Optimize>
     <OutputPath>C:\Users\Michael\Documents\DevExpress\IDE Tools\Community\PlugIns</OutputPath>
-    <DocumentationFile>DX_XPOSimplifier.xml</DocumentationFile>
+    <DocumentationFile>XPO_EasyFields.xml</DocumentationFile>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022,42353,42354,42355</NoWarn>
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
@@ -121,11 +119,6 @@
       <ProductName>Windows Installer 3.1</ProductName>
       <Install>true</Install>
     </BootstrapperPackage>
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="XPO_EasyFields.resx">
-      <DependentUpon>XPO_EasyFields.vb</DependentUpon>
-    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
