--- a/XPO_EasyFields/XPO_EasyFields/XPO_EasyFields.vbproj
+++ b/XPO_EasyFields/XPO_EasyFields/XPO_EasyFields.vbproj
@@ -97,6 +97,12 @@
     <Compile Include="XPO_EasyFields.vb">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="XPO_EasyFields_Options.Designer.vb">
+      <DependentUpon>XPO_EasyFields_Options.vb</DependentUpon>
+    </Compile>
+    <Compile Include="XPO_EasyFields_Options.vb">
+      <SubType>UserControl</SubType>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.0">
@@ -122,6 +128,11 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="XPO_EasyFields_Options.resx">
+      <DependentUpon>XPO_EasyFields_Options.vb</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.VisualBasic.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
