Wierd, C# doesn't give you compile errors until you build, how dumb!

--- a/XPO_EasyFields/DXCore_TestAppC/DXCore_TestAppC.csproj
+++ b/XPO_EasyFields/DXCore_TestAppC/DXCore_TestAppC.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
-    <ProductVersion>8.0.30703</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{D3C231B1-D9AB-4827-B323-810DEAFB0CD3}</ProjectGuid>
     <OutputType>Exe</OutputType>
@@ -40,7 +40,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="PersistentObject1.cs" />
+    <Compile Include="PersistentObject1.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
