--- a/trunk/XPO_EasyFields/DXCore_TestAppC/DXCore_TestAppC.csproj
+++ b/trunk/XPO_EasyFields/DXCore_TestAppC/DXCore_TestAppC.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BusinessObject.cs" />
     <Compile Include="PersistentObject1.cs">
       <SubType>Code</SubType>
     </Compile>
