--- a/CR_NavigateToDefinition/CR_NavigateToDefinition/CR_NavigateToDefinition.csproj
+++ b/CR_NavigateToDefinition/CR_NavigateToDefinition/CR_NavigateToDefinition.csproj
@@ -17,7 +17,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>C:\Documents and Settings\ROWIES\My Documents\DevExpress\IDE Tools\Community\PlugIns</OutputPath>
+    <OutputPath>..\..\..\..\Documents and Settings\jorge\My Documents\DevExpress\IDE Tools\Community\PlugIns\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
