--- a/trunk/CR_StyleNinja/CR_StyleNinja/CR_StyleNinja.vbproj
+++ b/trunk/CR_StyleNinja/CR_StyleNinja/CR_StyleNinja.vbproj
@@ -73,6 +73,8 @@
     <Import Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Readability\SA11XX_Registration.vb" />
+    <Compile Include="Readability\SA11XX_Rules.vb" />
     <Compile Include="Utility\HiddenDX.vb" />
     <Compile Include="Maintainability\SA14XX_Registration.vb" />
     <Compile Include="Maintainability\SA14XX_Rules.vb" />
