--- a/trunk/CR_StyleNinja/CR_StyleNinja/CR_StyleNinja.vbproj
+++ b/trunk/CR_StyleNinja/CR_StyleNinja/CR_StyleNinja.vbproj
@@ -73,20 +73,20 @@
     <Import Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Readability\SA11XX_Registration.vb" />
-    <Compile Include="Readability\SA11XX_Rules.vb" />
+    <Compile Include="SA11XX_Readability\Registration.vb" />
+    <Compile Include="SA11XX_Readability\Rules.vb" />
     <Compile Include="Utility\HiddenDX.vb" />
-    <Compile Include="Maintainability\SA14XX_Registration.vb" />
-    <Compile Include="Maintainability\SA14XX_Rules.vb" />
+    <Compile Include="SA14XX_Maintainability\Registration.vb" />
+    <Compile Include="SA14XX_Maintainability\Rules.vb" />
     <Compile Include="Utility\Components.vb" />
-    <Compile Include="Naming\NamingFixes.vb">
+    <Compile Include="SA13XX_Naming\Fixes.vb">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Naming\NamingQualification.vb">
+    <Compile Include="SA13XX_Naming\Qualification.vb">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Naming\NamingRegistration.vb" />
-    <Compile Include="Naming\Renaming.vb">
+    <Compile Include="SA13XX_Naming\Registration.vb" />
+    <Compile Include="SA13XX_Naming\Renaming.vb">
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Utility\CheckIssuesDelegateCaller.vb" />
