--- a/CodeIssueAnalysis/CodeIssueAnalysis/CodeIssueAnalysis.csproj
+++ b/CodeIssueAnalysis/CodeIssueAnalysis/CodeIssueAnalysis.csproj
@@ -46,6 +46,15 @@
     <Reference Include="DevExpress.DXCore.Controls.XtraGrid.v6.3, Version=9.3.3.0, Culture=neutral, PublicKeyToken=35c9f04b7764aa3d, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
     </Reference>
+    <Reference Include="DevExpress.DXCore.Platform, Version=10.1.2.0, Culture=neutral, PublicKeyToken=35c9f04b7764aa3d, processorArchitecture=MSIL" />
+    <Reference Include="EnvDTE, Version=8.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\..\Program Files\Microsoft Visual Studio 9.0\Common7\IDE\PublicAssemblies\EnvDTE.dll</HintPath>
+    </Reference>
+    <Reference Include="EnvDTE80, Version=8.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\..\Program Files\Microsoft Visual Studio 9.0\Common7\IDE\PublicAssemblies\EnvDTE80.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
@@ -61,8 +70,6 @@
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
-    <Reference Include="EnvDTE" />
-    <Reference Include="EnvDTE80" />
     <Reference Include="DevExpress.CodeRush.Common" />
     <Reference Include="DevExpress.CodeRush.Core" />
     <Reference Include="DevExpress.CodeRush.PlugInCore" />
@@ -80,12 +87,30 @@
       <DependentUpon>CodeIssueOptions.cs</DependentUpon>
     </Compile>
     <Compile Include="IssueProcessor.cs" />
+    <Compile Include="PlugIn1.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="PlugIn1.Designer.cs">
+      <DependentUpon>PlugIn1.cs</DependentUpon>
+    </Compile>
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <Compile Include="RefreshHelperClass.cs" />
+    <Compile Include="RemoveLayout.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="RemoveLayout.Designer.cs">
+      <DependentUpon>RemoveLayout.cs</DependentUpon>
+    </Compile>
+    <Compile Include="SaveLayout.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SaveLayout.Designer.cs">
+      <DependentUpon>SaveLayout.cs</DependentUpon>
+    </Compile>
     <Compile Include="ToolWindow1.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -99,16 +124,31 @@
       <DependentUpon>CodeIssueOptions.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <EmbeddedResource Include="PlugIn1.resx">
+      <DependentUpon>PlugIn1.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <EmbeddedResource Include="RemoveLayout.resx">
+      <DependentUpon>RemoveLayout.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SaveLayout.resx">
+      <DependentUpon>SaveLayout.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
     <EmbeddedResource Include="ToolWindow1.resx">
       <DependentUpon>ToolWindow1.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="All.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
