--- a/XPO_EasyFields/DXCore_TestAppC/DXCore_TestAppC.csproj
+++ b/XPO_EasyFields/DXCore_TestAppC/DXCore_TestAppC.csproj
@@ -40,12 +40,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BusinessObject.cs" />
+    <Compile Include="CollectionFieldsClass.cs" />
     <Compile Include="PersistentObject1.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="testobject.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
