DX_ZenCoding: Transport commit.

--- a/DX_ZenCoding/DX_ZenCoding/DX_ZenCoding.vbproj
+++ b/DX_ZenCoding/DX_ZenCoding/DX_ZenCoding.vbproj
@@ -88,6 +88,10 @@
     <Import Include="System.Diagnostics" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Copy of PlugIn1.Designer.vb">
+      <DependentUpon>Copy of PlugIn1.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Copy of PlugIn1.vb" />
     <Compile Include="PlugIn1.vb">
       <SubType>Component</SubType>
     </Compile>
