--- a/MiniCodeColumn/MiniCodeColumn/MiniCodeColumn.csproj
+++ b/MiniCodeColumn/MiniCodeColumn/MiniCodeColumn.csproj
@@ -100,6 +100,9 @@
     <EmbeddedResource Include="CodeToolWindow.resx">
       <DependentUpon>CodeToolWindow.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="MiniCodeColPlugIn.resx">
+      <DependentUpon>MiniCodeColPlugIn.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="PluginOptions.resx">
       <DependentUpon>PluginOptions.cs</DependentUpon>
     </EmbeddedResource>
